# 2DAVM_CPP

./: CMakeLists.txt
cmake/: qnx_toolchain.cmake
include/: AVM.h  AVM2D.h  LuminanceBalancer.h  PlatformGL.h  PlatformWindow.h  QnxStreamAdapter.h  QnxVehicleAdapter.h  ScreenCompositor.h  SensorData.h  SharedTextureManager.h  StitchBinLoader.h  SurroundViewParams.h  TransparentChassis.h  VideoReader.h
shaders/: compositor_fragment.glsl  compositor_vertex.glsl  fragment.glsl  tc_composite.glsl  tc_update.glsl  vertex.glsl
shaders_es/: compositor_fragment.glsl  compositor_vertex.glsl  fragment.glsl  tc_composite.glsl  tc_update.glsl  vertex.glsl
src/: AVM2D.cpp  LuminanceBalancer.cpp  PlatformWindow.cpp  QnxStreamAdapter.cpp  QnxVehicleAdapter.cpp  ScreenCompositor.cpp  SharedTextureManager.cpp  StitchBinLoader.cpp  TransparentChassis.cpp  VideoReader.cpp  main.cpp
